--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ img {
   max-width: 100%;
   vertical-align: middle;
 }
-.container{
+.container {
   display: inline-block;
 }
 .card {
@@ -59,8 +59,7 @@ img {
   color: #666666;
   font-family: "Inter", "Inter Placeholder", sans-serif;
   font-weight: 500;
-  letter-spacing: var(--framer-letter-spacing, 0);
-  /* word-spacing: 4px; */
+  letter-spacing: 0.8px;
   text-decoration-style: solid;
   margin-left: 30px;
   margin-bottom: 20px;
